Fixes minor layout issues

--- a/app/_scss/pages/_home.scss
+++ b/app/_scss/pages/_home.scss
@@ -1,5 +1,5 @@
 #home {
-	.flex-col {
+	>.flex-col {
 		height: 100%;
 		min-height: 600px;
 	}
@@ -79,7 +79,7 @@
 
 @media (max-width: 1099px) {
 	#home {
-		.flex-col {
+		>.flex-col {
 			min-height: 540px;
 		}
 
@@ -91,7 +91,7 @@
 
 @media (max-width: 999px) {
 	#home {
-		.flex-col {
+		>.flex-col {
 			min-height: 576px;
 		}
 
@@ -134,7 +134,7 @@
 			}
 		}
 
-		.flex-col {
+		>.flex-col {
 			min-height: 500px;
 			max-height: 100%; // Firefox mobile
 		}
