--- a/app/_scss/sitewide/_base.scss
+++ b/app/_scss/sitewide/_base.scss
@@ -344,7 +344,7 @@ ul.cta li, ol.cta li {
 	body>section {
 		width: 80%;
 		max-width: 650px;
-		margin: 2.3em auto 6.5em 3em;
+		margin: 2.3em auto 4.8em 3em;
 	}
 
 	body>section.expanded {
